--- a/AndroidStudio/app/src/main/res/layout/content_main_activity_desarrollo_academico.xml
+++ b/AndroidStudio/app/src/main/res/layout/content_main_activity_desarrollo_academico.xml
@@ -9,12 +9,14 @@
     tools:showIn="@layout/app_bar_main_activity_desarrollo_academico">
 
     <TextView
+        android:id="@+id/TextViwNews"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:text="Noticias"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.032" />
 
 </android.support.constraint.ConstraintLayout>
