--- a/AndroidStudio/app/src/main/res/values/colors.xml
+++ b/AndroidStudio/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#274bae</color>
-    <color name="colorPrimaryDark">#c2ab16</color>
-    <color name="colorAccent">#0022ff</color>
+<color name="colorPrimary">#274bae</color>
+<color name="colorPrimaryDark">#c2ab16</color>
+<color name="colorAccent">#0022ff</color>
+<string-array name="colors">colores</string-array>
 </resources>
