--- a/AndroidStudio/app/src/main/res/xml/pref_general.xml
+++ b/AndroidStudio/app/src/main/res/xml/pref_general.xml
@@ -29,5 +29,11 @@
         android:negativeButtonText="@null"
         android:positiveButtonText="@null"
         android:title="@string/pref_title_add_friends_to_messages" />
+    <ListPreference
+        android:defaultValue="1"
+        android:entries="@array/colors"
+        android:entryValues="@array/colors"
+        android:key="list_preference_1"
+        android:title="List preference" />
 
 </PreferenceScreen>
