--- a/DesarrolloAcademico2/app/src/main/res/values/colors.xml
+++ b/DesarrolloAcademico2/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#274bae</color>
+    <color name="colorPrimaryDark">#c2ab16</color>
+    <color name="colorAccent">#0022ff</color>
+    <string-array name="colors">colores</string-array>
 </resources>
