--- a/AndroidStudio/app/src/main/res/layout/activity_search.xml
+++ b/AndroidStudio/app/src/main/res/layout/activity_search.xml
@@ -21,6 +21,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_materias"
         android:layout_width="368dp"
         android:layout_height="431dp"
         tools:layout_editor_absoluteX="8dp"
