--- a/AndroidStudio/app/src/main/res/layout/activity_search.xml
+++ b/AndroidStudio/app/src/main/res/layout/activity_search.xml
@@ -20,10 +20,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_materias"
-        android:layout_width="368dp"
-        android:layout_height="431dp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="72dp" />
+    <ListView
+        android:id="@+id/lv_materias"
+        android:layout_width="318dp"
+        android:layout_height="430dp"
+        android:layout_marginStart="33dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="33dp"
+        android:layout_marginBottom="2dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editText" />
+
 </android.support.constraint.ConstraintLayout>
