antes de jsomobject

--- a/AndroidStudio/app/src/main/res/menu/activity_main_desarrollo_academico_drawer.xml
+++ b/AndroidStudio/app/src/main/res/menu/activity_main_desarrollo_academico_drawer.xml
@@ -14,7 +14,10 @@
         <menu>
             <item
                 android:id="@+id/item_search"
-                android:title="Buscar" />
+                android:title="Materias" />
+            <item
+                android:id="@+id/item_asesores"
+                android:title="Asesores" />
             <item
                 android:id="@+id/idIssue"
                 android:title="Reportar un problema" />
