--- a/AndroidStudio/app/src/main/res/layout/activity_user_detail.xml
+++ b/AndroidStudio/app/src/main/res/layout/activity_user_detail.xml
@@ -10,104 +10,119 @@
         android:id="@+id/imageView2"
         android:layout_width="79dp"
         android:layout_height="93dp"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="28dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="28dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:text="fbUser Name"
-        tools:layout_editor_absoluteX="104dp"
+        app:layout_constraintStart_toEndOf="@+id/imageView2"
         tools:layout_editor_absoluteY="28dp" />
 
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        app:layout_constraintStart_toEndOf="@+id/imageView2"
         app:srcCompat="@android:drawable/stat_sys_phone_call_forward"
-        tools:layout_editor_absoluteX="104dp"
         tools:layout_editor_absoluteY="57dp" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:text="thelephone"
-        tools:layout_editor_absoluteX="136dp"
+        app:layout_constraintStart_toEndOf="@+id/imageView3"
         tools:layout_editor_absoluteY="64dp" />
 
     <ImageView
         android:id="@+id/imageView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        app:layout_constraintStart_toEndOf="@+id/imageView2"
         app:srcCompat="@android:drawable/sym_action_email"
-        tools:layout_editor_absoluteX="104dp"
         tools:layout_editor_absoluteY="93dp" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:text="email"
-        tools:layout_editor_absoluteX="138dp"
+        app:layout_constraintStart_toEndOf="@+id/imageView4"
         tools:layout_editor_absoluteY="93dp" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="290dp"
         android:layout_height="126dp"
+        android:layout_marginTop="8dp"
         android:background="@color/com_facebook_likeview_text_color"
         android:text="Resources"
-        tools:layout_editor_absoluteX="47dp"
-        tools:layout_editor_absoluteY="156dp" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView4"
+        tools:layout_editor_absoluteX="47dp" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/lv_materias"
-        android:layout_width="287dp"
-        android:layout_height="96dp"
-        tools:layout_editor_absoluteX="45dp"
-        tools:layout_editor_absoluteY="302dp" />
+        android:layout_width="291dp"
+        android:layout_height="99dp"
+        tools:layout_editor_absoluteX="46dp"
+        tools:layout_editor_absoluteY="274dp">
 
-    <ImageView
-        android:id="@+id/imageView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@android:drawable/btn_star_big_on"
-        tools:layout_editor_absoluteX="45dp"
-        tools:layout_editor_absoluteY="419dp" />
+        <LinearLayout
+            android:layout_width="200dp"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/imageView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@android:drawable/btn_star_big_on"
-        tools:layout_editor_absoluteX="72dp"
-        tools:layout_editor_absoluteY="419dp" />
+            <ImageView
+                android:id="@+id/imageView9"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@android:drawable/btn_star_big_on"
+                tools:layout_editor_absoluteX="174dp"
+                tools:layout_editor_absoluteY="419dp" />
 
-    <ImageView
-        android:id="@+id/imageView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@android:drawable/btn_star_big_on"
-        tools:layout_editor_absoluteX="106dp"
-        tools:layout_editor_absoluteY="419dp" />
+            <ImageView
+                android:id="@+id/imageView8"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@android:drawable/btn_star_big_on"
+                tools:layout_editor_absoluteX="142dp"
+                tools:layout_editor_absoluteY="419dp" />
 
-    <ImageView
-        android:id="@+id/imageView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@android:drawable/btn_star_big_on"
-        tools:layout_editor_absoluteX="142dp"
-        tools:layout_editor_absoluteY="419dp" />
+            <ImageView
+                android:id="@+id/imageView7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@android:drawable/btn_star_big_on"
+                tools:layout_editor_absoluteX="106dp"
+                tools:layout_editor_absoluteY="419dp" />
 
-    <ImageView
-        android:id="@+id/imageView9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@android:drawable/btn_star_big_on"
-        tools:layout_editor_absoluteX="174dp"
-        tools:layout_editor_absoluteY="419dp" />
+            <ImageView
+                android:id="@+id/imageView6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@android:drawable/btn_star_big_on"
+                tools:layout_editor_absoluteX="72dp"
+                tools:layout_editor_absoluteY="419dp" />
+
+            <ImageView
+                android:id="@+id/imageView5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@android:drawable/btn_star_big_on"
+                tools:layout_editor_absoluteX="45dp"
+                tools:layout_editor_absoluteY="419dp" />
+        </LinearLayout>
+    </android.support.v7.widget.RecyclerView>
 
 </android.support.constraint.ConstraintLayout>
