--- a/AndroidStudio/app/src/main/res/layout/activity_user_detail.xml
+++ b/AndroidStudio/app/src/main/res/layout/activity_user_detail.xml
@@ -89,41 +89,46 @@
         app:layout_constraintTop_toBottomOf="@+id/lv_materias">
 
         <ImageView
-            android:id="@+id/imageView9"
+            android:id="@+id/s1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:visibility="invisible"
             app:srcCompat="@android:drawable/btn_star_big_on"
             tools:layout_editor_absoluteX="174dp"
             tools:layout_editor_absoluteY="419dp" />
 
         <ImageView
-            android:id="@+id/imageView8"
+            android:id="@+id/s2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:visibility="invisible"
             app:srcCompat="@android:drawable/btn_star_big_on"
             tools:layout_editor_absoluteX="142dp"
             tools:layout_editor_absoluteY="419dp" />
 
         <ImageView
-            android:id="@+id/imageView7"
+            android:id="@+id/s3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:visibility="invisible"
             app:srcCompat="@android:drawable/btn_star_big_on"
             tools:layout_editor_absoluteX="106dp"
             tools:layout_editor_absoluteY="419dp" />
 
         <ImageView
-            android:id="@+id/imageView6"
+            android:id="@+id/s4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:visibility="invisible"
             app:srcCompat="@android:drawable/btn_star_big_on"
             tools:layout_editor_absoluteX="72dp"
             tools:layout_editor_absoluteY="419dp" />
 
         <ImageView
-            android:id="@+id/imageView5"
+            android:id="@+id/s5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:visibility="invisible"
             app:srcCompat="@android:drawable/btn_star_big_on"
             tools:layout_editor_absoluteX="45dp"
             tools:layout_editor_absoluteY="419dp" />
