--- a/AndroidStudio/app/src/main/res/layout/activity_search.xml
+++ b/AndroidStudio/app/src/main/res/layout/activity_search.xml
@@ -10,15 +10,26 @@
         android:id="@+id/lv_materias"
         android:layout_width="333dp"
         android:layout_height="449dp"
-        tools:layout_editor_absoluteX="26dp"
-        tools:layout_editor_absoluteY="55dp" />
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_materias" />
 
     <TextView
         android:id="@+id/tv_materias"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
         android:text="Materias"
-        tools:layout_editor_absoluteX="26dp"
-        tools:layout_editor_absoluteY="16dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.057"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
