--- a/AndroidStudio/app/src/main/res/layout/activity_user_detail.xml
+++ b/AndroidStudio/app/src/main/res/layout/activity_user_detail.xml
@@ -151,4 +151,21 @@
 
     </android.support.v7.widget.RecyclerView>
 
+    <ImageView
+        android:id="@+id/led_disp"
+        android:layout_width="42dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/tv_resources"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.787"
+        app:layout_constraintStart_toEndOf="@+id/tv_UserName"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.256"
+        app:srcCompat="@android:drawable/presence_online" />
+
 </android.support.constraint.ConstraintLayout>
