--- a/AndroidStudio/app/src/main/res/layout/activity_search.xml
+++ b/AndroidStudio/app/src/main/res/layout/activity_search.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Views.SearchView">
+    tools:context=".Views.SubjectView">
 
     <ListView
         android:id="@+id/lv_materias"
