--- a/AndroidStudio/app/src/main/res/layout/activity_user_detail.xml
+++ b/AndroidStudio/app/src/main/res/layout/activity_user_detail.xml
@@ -81,16 +81,19 @@
 
     <LinearLayout
         android:layout_width="288dp"
-        android:layout_height="53dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="48dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="36dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.75"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lv_materias">
 
         <ImageView
             android:id="@+id/s1"
-            android:layout_width="wrap_content"
+            android:layout_width="30dp"
             android:layout_height="wrap_content"
             android:visibility="invisible"
             app:srcCompat="@android:drawable/btn_star_big_on"
@@ -99,7 +102,7 @@
 
         <ImageView
             android:id="@+id/s2"
-            android:layout_width="wrap_content"
+            android:layout_width="30dp"
             android:layout_height="wrap_content"
             android:visibility="invisible"
             app:srcCompat="@android:drawable/btn_star_big_on"
@@ -108,7 +111,7 @@
 
         <ImageView
             android:id="@+id/s3"
-            android:layout_width="wrap_content"
+            android:layout_width="30dp"
             android:layout_height="wrap_content"
             android:visibility="invisible"
             app:srcCompat="@android:drawable/btn_star_big_on"
@@ -117,7 +120,7 @@
 
         <ImageView
             android:id="@+id/s4"
-            android:layout_width="wrap_content"
+            android:layout_width="30dp"
             android:layout_height="wrap_content"
             android:visibility="invisible"
             app:srcCompat="@android:drawable/btn_star_big_on"
@@ -126,7 +129,7 @@
 
         <ImageView
             android:id="@+id/s5"
-            android:layout_width="wrap_content"
+            android:layout_width="30dp"
             android:layout_height="wrap_content"
             android:visibility="invisible"
             app:srcCompat="@android:drawable/btn_star_big_on"
