--- a/AndroidStudio/app/src/main/res/layout/app_bar_main_activity_desarrollo_academico.xml
+++ b/AndroidStudio/app/src/main/res/layout/app_bar_main_activity_desarrollo_academico.xml
@@ -25,5 +25,13 @@
         android:id="@+id/include"
         layout="@layout/content_main_activity_desarrollo_academico" />
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="match_parent"
+        android:layout_height="383dp"
+        app:layout_anchor="@+id/include"
+        app:layout_anchorGravity="bottom|center"
+        app:srcCompat="@drawable/logo" />
+
 
 </android.support.design.widget.CoordinatorLayout>
