--- a/AndroidStudio/app/src/main/res/values/colors.xml
+++ b/AndroidStudio/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-<color name="colorPrimary">#274bae</color>
-<color name="colorPrimaryDark">#c2ab16</color>
-<color name="colorAccent">#0022ff</color>
+<color name="colorPrimary">#2448ab</color>
+<color name="colorPrimaryDark">#ffffff</color>
+<color name="colorAccent">#1a2676</color>
 
     <color name="colorMateriaHigh">#ff0004</color>
     <color name="colorMateriaLow">#00ff15</color>
